--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <h1 class="header">Your Name Here</h1>
+    <h1 id="head1", class="header">Your Name Here</h1>
     <div>
       <p>This is a bunch of information about myself. I'm from here and there and discovered my
       love of programming when this happend. When I'm not working I'm busy doing this and that.
