--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <h2 class="header">Contact Me</h2>
     <div>
-     Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
+     Email me at: <a id="email" href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
     <ul class="links">
