--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div >
       <h3 class="header">Here are some of my Skills!</h3>
-      <ul>
+      <ul >
         <h3 class="header">Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
@@ -48,7 +48,7 @@
      Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
-    <ul>
+    <ul class="uls">
       <li> <a href="https://github.com">github link</a> </li>
       <li> <a href="https://linkedin.com">LinkedIn link</a> </li>
       <li> <a href="https://angellist.com">Angel list link</a> </li>
