--- a/css_selector.html
+++ b/css_selector.html
@@ -35,7 +35,7 @@
         <li>Node</li>
         <li>Bootstrap</li>
 
-      </ol>
+      </ol id="olone">
     </div>
 
     <div>
@@ -46,10 +46,10 @@
 
     <h2 class="headerOne">Contact Me</h2>
     <div>
-     Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
+     Email me at: <a id="email" href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
-    <ul>
+    <ul class= "comul">
       <li> <a href="https://github.com">github link</a> </li>
       <li> <a href="https://linkedin.com">LinkedIn link</a> </li>
       <li> <a href="https://angellist.com">Angel list link</a> </li>
