--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div >
       <h3>Here are some of my Skills!</h3>
-      <ul>
+      <ul class="languages">
         <h3>Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
