--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>CSS Intro</title>
     <link rel="stylesheet" href="./index.css">
   </head>
-  <body>
+  <body id="centertext">
 
     <h1 id="head1", class="header">Your Name Here</h1>
-    <div>
+    <div class="class1">
       <p>This is a bunch of information about myself. I'm from here and there and discovered my
       love of programming when this happend. When I'm not working I'm busy doing this and that.
     </p>
