--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CSS Intro</title>
     <link rel="stylesheet" href="./index.css">
   </head>
-  <body>
+  <body id="body">
 
     <h1 id="sayMyName">Your Name Here</h1>
     <div>
@@ -37,21 +37,21 @@
       </ol>
     </div>
 
-    <div>
+    <div id="div">
       <h3>Hardest Bug So Far</h3>
-      <p>My hardest bug I ever came across was this infinite loop I couldn't escape. </p>
+      <p id="firstP">My hardest bug I ever came across was this infinite loop I couldn't escape. </p>
       <p>I came up with a totally sick solution though by doing ... </p>
     </div>
 
     <h2>Contact Me</h2>
     <div>
-     Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
+     Email me at: <a href id="email" href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
     <ul id="comList">
-      <li> <a href="https://github.com">github link</a> </li>
-      <li> <a href="https://linkedin.com">LinkedIn link</a> </li>
-      <li> <a href="https://angellist.com">Angel list link</a> </li>
+      <li> <a href id="link1" href="https://github.com">github link</a> </li>
+      <li> <a href id="link2" href="https://linkedin.com">LinkedIn link</a> </li>
+      <li> <a href id="link3" href="https://angellist.com">Angel list link</a> </li>
     </ul>
 
     <form action="index.html" method="post">
