--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div >
       <h3 class="header">Here are some of my Skills!</h3>
-      <ul>
+      <ul class="language">
         <h3 class="header">Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
