--- a/css_selector.html
+++ b/css_selector.html
@@ -19,7 +19,7 @@
 
     <div >
       <h3 class="headerOne">Here are some of my Skills!</h3>
-      <ul>
+      <ul id="languageUl">
         <h3 class="headerOne">Languages</h3>
         <li>JavaScript</li>
         <li>SQL</li>
@@ -38,18 +38,18 @@
       </ol id="olone">
     </div>
 
-    <div>
+    <div id="bug">
       <h3 class="headerOne">Hardest Bug So Far</h3>
       <p>My hardest bug I ever came across was this infinite loop I couldn't escape. </p>
       <p>I came up with a totally sick solution though by doing ... </p>
     </div>
 
     <h2 class="headerOne">Contact Me</h2>
-    <div>
+    <div id="emailMe">
      Email me at: <a id="email" href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
-    <ul class= "comul">
+    <ul class="comul">
       <li> <a href="https://github.com">github link</a> </li>
       <li> <a href="https://linkedin.com">LinkedIn link</a> </li>
       <li> <a href="https://angellist.com">Angel list link</a> </li>
