--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <h1 class="header" id="name">Your Name Here</h1>
-    <div>
+    <div class="para">
       <p>This is a bunch of information about myself. I'm from here and there and discovered my
       love of programming when this happend. When I'm not working I'm busy doing this and that.
     </p>
