--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <li>React</li>
         <li>PostgreSQL</li>
         <li>Node</li>
-        <li>Bootstrap</li>
+        <li id="olChild">Bootstrap</li>
 
       </ol>
     </div>
@@ -45,10 +45,10 @@
 
     <h2 class="header">Contact Me</h2>
     <div>
-     Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
+     Email me at: <a class="emailLink" href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a>
     </div>
 
-    <ul>
+    <ul class="noBullets">
       <li> <a href="https://github.com">github link</a> </li>
       <li> <a href="https://linkedin.com">LinkedIn link</a> </li>
       <li> <a href="https://angellist.com">Angel list link</a> </li>
