Missing language-list id

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <h2 class="important" id="skills-header">Here are some of my Skills!</h2>
         
       <h3 class="important" id="language-list">Languages</h3>
-      <ul>
+      <ul class="language-list">
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
