use #languages-list id on the ul not the h2 per instructions

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
     <div>
       <h2 class="important" id="skills-header">Here are some of my Skills!</h2>
         
-      <h3 class="important" id="language-list">Languages</h3>
-      <ul class="language-list">
+      <h3 class="important">Languages</h3>
+      <ul id="language-list">
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
