--- a/about.html
+++ b/about.html
@@ -20,20 +20,20 @@
       <h2 class="important" id="skills-header">Here are some of my Skills!</h3>
       <ul>
         <h3 class="important">Languages </h3>
-      <ul id ="languages-list">
+         
     <div>
       <h2 class ="important">Here are some of my Skills!</h2>
         
-        <h3 class="important">Languages</h3>
-      <ul>
+      <h3 class="important">Languages</h3>
+      <ul id ="language-list">>
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
         <li>CSS3</li>
       </ul>
-
+      <h3 class="important">Libraries</h3>
       <ol>
-        <h3 class="important">Libraries</h3>
+  
         <li>React</li>
         <li>PostgreSQL</li>
         <li>Node</li>
