added link changes

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     <h2 class="important">Contact Me</h2>
     <div>Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a></div>
 
-    <ul>
+    <ul class="links-list">
       <li><a href="https://github.com">github link</a></li>
       <li><a href="https://linkedin.com">LinkedIn link</a></li>
       <li><a href="https://angellist.com">Angel list link</a></li>
