--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <h2 class="important" id="skills-header">Here are some of my Skills!</h2>
         
         <h3 class="important">Languages</h3>
-      <ul>
+      <ul id="language-list">
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
@@ -39,7 +39,7 @@
     <div>
       <h2 class="important">Hardest Bug So Far</h2>
       <p>My hardest bug I ever came across was this infinite loop I couldn't escape.</p>
-      <p>I came up with a totally sick solution though by doing ...</p>
+      <p class="second p">I came up with a totally sick solution though by doing ...</p>
     </div>
 
     <h2 class="important">Contact Me</h2>
