--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <h2 class ="important">Here are some of my Skills!</h2>
         
       <h3 class="important">Languages</h3>
-      <ul id ="language-list">>
+      <ul id ="language-list">
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
