--- a/about.html
+++ b/about.html
@@ -43,13 +43,13 @@
     </div>
 
     <h2 class="important">Contact Me</h2>
-    <div>Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a></div>
+    <div>Email me at: <a class="five" href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a></div>
 
     <ul class="links-list">
-      <li><a href="https://github.com">github link</a></li>
-      <li><a href="https://linkedin.com">LinkedIn link</a></li>
-      <li><a href="https://angellist.com">Angel list link</a></li>
-      <li><a href="https://pursuit.org">Pursuit link</a></li>
+      <li><a class="one" href="https://github.com">github link</a></li>
+      <li><a class="two" href="https://linkedin.com">LinkedIn link</a></li>
+      <li><a class="three" href="https://angellist.com">Angel list link</a></li>
+      <li><a class="four" href="https://pursuit.org">Pursuit link</a></li>
     </ul>
 
     <form action="index.html" method="post">
