Second Attempt 3failing

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
       <h2 class="important" id="skills-header">Here are some of my Skills!</h2>
         
         <h3 class="important">Languages</h3>
-      <ul>
+      <ul id="language-list">
         <li>JavaScript</li>
         <li>SQL</li>
         <li>HTML5</li>
@@ -46,10 +46,10 @@
     <div>Email me at: <a href="mailto:hello@pursuit.org" target="_top">hello@pursuit.org</a></div>
 
     <ul class="links-list">
-      <li><a href="https://github.com">github link</a></li>
-      <li><a href="https://linkedin.com">LinkedIn link</a></li>
-      <li><a href="https://angellist.com">Angel list link</a></li>
-      <li><a href="https://pursuit.org">Pursuit link</a></li>
+      <li class="links-list"><a href="https://github.com">github link</a></li>
+      <li class="links-list"><a href="https://linkedin.com">LinkedIn link</a></li>
+      <li class="links-list"><a href="https://angellist.com">Angel list link</a></li>
+      <li class="links-list"><a href="https://pursuit.org">Pursuit link</a></li>
     </ul>
 
     <form action="index.html" method="post">
